==> mgardenswartz/color_sorter_conveyor/test-19/Core/Src/SparkFunAPDS9960.cpp <==
 #include "SparkFunAPDS9960.h"

int SparkFun_APDS9960::readGesture()
{
    uint8_t fifo_level = 0;
    uint8_t bytes_read = 0;
    uint8_t fifo_data[128];
    uint8_t gstatus;
    int motion;
    int i;

    /* Make sure that power and gesture is on and data is valid */
    if( !isGestureAvailable() || !(getMode() & 0b01000001) ) {
        return DIR_NONE;
    }

    /* Keep looping as long as gesture data is valid */
    while(1) {

        /* Wait some time to collect next batch of FIFO data */
        HAL_Delay(FIFO_PAUSE_TIME);

        /* Get the contents of the STATUS register. Is data still valid? */
        if( !wireReadDataByte(APDS9960_GSTATUS, gstatus) ) {
            return ERROR;
        }

        /* If we have valid data, read in FIFO */
        if( (gstatus & APDS9960_GVALID) == APDS9960_GVALID ) {

            /* Read the current FIFO level */
            if( !wireReadDataByte(APDS9960_GFLVL, fifo_level) ) {
                return ERROR;
            }

#if SPARKFUN_DEBUG
            Serial.print("FIFO Level: ");
            Serial.println(fifo_level);
#endif

            /* If there's stuff in the FIFO, read it into our data block */
            if( fifo_level > 0) {
                bytes_read = wireReadDataBlock(  APDS9960_GFIFO_U,
                                                (uint8_t*)fifo_data,
                                                (fifo_level * 4) );
                if( bytes_read == -1 ) {
                    return ERROR;
                }
#if SPARKFUN_DEBUG
                Serial.print("FIFO Dump: ");
                for ( i = 0; i < bytes_read; i++ ) {
                    Serial.print(fifo_data[i]);
                    Serial.print(" ");
                }
                Serial.println();
#endif

                /* If at least 1 set of data, sort the data into U/D/L/R */
                if( bytes_read >= 4 ) {
                    for( i = 0; i < bytes_read; i += 4 ) {
                        gesture_data_.u_data[gesture_data_.index] = \
                                                            fifo_data[i + 0];
                        gesture_data_.d_data[gesture_data_.index] = \
                                                            fifo_data[i + 1];
                        gesture_data_.l_data[gesture_data_.index] = \
                                                            fifo_data[i + 2];
                        gesture_data_.r_data[gesture_data_.index] = \
                                                            fifo_data[i + 3];
                        gesture_data_.index++;
                        gesture_data_.total_gestures++;
                    }

#if SPARKFUN_DEBUG
                Serial.print("Up Data: ");
                for ( i = 0; i < gesture_data_.total_gestures; i++ ) {
                    Serial.print(gesture_data_.u_data[i]);
                    Serial.print(" ");
                }
                Serial.println();
#endif

                    /* Filter and process gesture data. Decode near/far state */
                    if( processGestureData() ) {
                        if( decodeGesture() ) {
                            //***TODO: U-Turn Gestures
#if SPARKFUN_DEBUG
                            //Serial.println(gesture_motion_);
#endif
                        }
                    }

                    /* Reset data */
                    gesture_data_.index = 0;
                    gesture_data_.total_gestures = 0;
                }
            }
        } else {

            /* Determine best guessed gesture and clean up */
            HAL_Delay(FIFO_PAUSE_TIME);
            decodeGesture();
            motion = gesture_motion_;
#if SPARKFUN_DEBUG
            Serial.print("END: ");
            Serial.println(gesture_motion_);
#endif
            resetGestureParameters();
            return motion;
        }
    }
}

bool SparkFun_APDS9960::wireWriteByte(uint8_t val)
{
    HAL_StatusTypeDef status;
    status = HAL_I2C_Master_Transmit(I2C_handle, APDS9960_I2C_ADDR << 1, &val, 1, HAL_MAX_DELAY);
    if (status != HAL_OK) {
        return false;
    }

    return true;
}

bool SparkFun_APDS9960::wireWriteDataByte(uint8_t reg, uint8_t val)
{
    uint8_t data[2] = {reg, val};
    HAL_StatusTypeDef status;
    status = HAL_I2C_Master_Transmit(I2C_handle, APDS9960_I2C_ADDR << 1, data, 2, HAL_MAX_DELAY);
    if (status != HAL_OK) {
        return false;
    }

    return true;
}

bool SparkFun_APDS9960::wireWriteDataBlock(uint8_t reg, uint8_t *val, unsigned int len)
{
    HAL_StatusTypeDef status;

    status = HAL_I2C_Mem_Write(I2C_handle, APDS9960_I2C_ADDR << 1, reg, I2C_MEMADD_SIZE_8BIT, val, len, HAL_MAX_DELAY);
    if (status != HAL_OK) {
        return false;
    }

    return true;
}

bool SparkFun_APDS9960::wireReadDataByte(uint8_t reg, uint8_t &val)
{
    uint8_t receivedData;

    /* Indicate which register we want to read from */
    if (!wireWriteByte(reg)) {
        return false;
    }

    /* Read from register */
    HAL_StatusTypeDef status = HAL_I2C_Mem_Read(I2C_handle, APDS9960_I2C_ADDR << 1, reg, I2C_MEMADD_SIZE_8BIT, &receivedData, 1, HAL_MAX_DELAY);
    if (status != HAL_OK) {
        return false;
    }

    val = receivedData;

    return true;
}

int SparkFun_APDS9960::wireReadDataBlock(uint8_t reg, uint8_t *val, unsigned int len)
{
    /* Indicate which register we want to read from */
    if (!wireWriteByte(reg)) {
        return -1;
    }

    /* Read block data */
    HAL_StatusTypeDef status = HAL_I2C_Mem_Read(I2C_handle, APDS9960_I2C_ADDR << 1, reg, I2C_MEMADD_SIZE_8BIT, val, len, HAL_MAX_DELAY);
    if (status != HAL_OK) {
        return -1;
    }

    return len;
}
